Fix whitespace

--- a/src/atoms/builderInputs/.module.scss
+++ b/src/atoms/builderInputs/.module.scss
@@ -5,7 +5,7 @@
   margin: inherit;
   padding: inherit;
   outline: inherit;
-  display: inherit !important;
+  // display: inherit !important;
   width: 100%;
   text-align: center;
   justify-content: center;
